margin overlap issue

--- a/ocr.css
+++ b/ocr.css
@@ -110,7 +110,6 @@ body,
 }
 
 .line {
-  margin: 5px 0;
   min-height: 30px;
 }
 
